Bug 344896. Finish refactoring how accessibility code gets target accessible for a DOM event. Patch by surkov, r=aaronlev